--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,8 @@
 </head>
 
 <body>
-  <script src="app.js"></script>
+  <div id="app"></div>
+  <script src="bundle.js"></script>
 </body>
 
 </html>
